Se ajusta el catalogo de elementos #137
